src/test/deca/syntax/invalid/provided/chaine_incomplete.deca
// Description:
//    tests de programme incorrect lexicalement (chaine non terminee)
//
// Resultats:
//    ligne 11 : Erreur, chaine non terminee (sur fin de fichier)
//    token recognition error at: '"chaine pas finie\n'
//
// Historique:
//    cree le 01/01/2023
//
"chaine pas finie
